--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Job Prompt</title>
 </head>
 <body>
+
 <main>
     <h1>Job Prompter</h1>
     <h2 id="role-title"></h2>
@@ -13,5 +14,6 @@
     <p id="role-description"></p>
     <span id="error-message"></span>
 </main>
+<script src="scripts/main.js"></script>
 </body>
 </html>
